--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-    <title>Code-A-Thon</title>
+    <title>logiThon</title>
   </head>
   <body>
     <div id="root"></div>
