--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="\src\assets\dmce.png" />
+    <link rel="icon" type="image/svg+xml" href="\assets\dmce.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Would you like to participate in a hackathon called Logithon? It's a 24-hour event where participants, known as 'hackers', collaborate to develop functional prototypes of hardware or software within the duration of the hackathon.">
+    <meta name="author" content="Softlink global pvt. ltd.">
+    <meta name="keywords" content="AI,blochain,hackathon,logithon,competition,softlink,dmce">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
 
