--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="\dmce.png" />
+    <link rel="icon" type="image/svg+xml" href="dmce.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Would you like to participate in a hackathon called Logithon? It's a 24-hour event where participants, known as 'hackers', collaborate to develop functional prototypes of hardware or software within the duration of the hackathon.">
     <meta name="author" content="Softlink global pvt. ltd.">
@@ -15,7 +15,7 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-    <title>logiThon</title>
+    <title>LogiThon</title>
   </head>
   <body>
     <div id="root"></div>
