--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="dmce.png" /> -->
-    <link rel="icon" href="dmce.png" type="image/x-icon">
+    <link rel="icon" href="mainlogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -19,7 +19,7 @@
       property="og:description"
       content="Would you like to participate in a hackathon called Logithon? It's a 24-hour event where participants, known as 'hackers', collaborate to develop functional prototypes of hardware or software within the duration of the hackathon."
     />
-    <meta property="og:image" content="dmce.png" />
+    <meta property="og:image" content="mainlogo.png" />
     <meta property="og:url" content="https://www.logithon.ai/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="LogiThon" />
